#####################################################
#    Add libraries
#####################################################

add_subdirectory(kindslib)
add_subdirectory(linalglib)
add_subdirectory(corelib)
add_subdirectory(corecpplib)
add_subdirectory(eampflib)
add_subdirectory(atomlib)

#####################################################
